--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
     "react-native-web-webview": "^1.0.2",
-    "react-native-webview": "^11.6.5"
+    "react-native-webview": "^11.6.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
