parallel md content fetch at runtime; added sketch for precompile phase but didnt need it; removed dark theme support

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "precompile": "tsc --project tsconfig.precompile.json && node lib/precompile/main.js",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "build-web": "expo build:web"
   },
   "jest": {
     "preset": "jest-expo"
