--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,9 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true
-  }
+  },
+  "exclude": [
+    "node_modules", "babel.config.js", "metro.config.js", "jest.config.js", 
+      "precompile"
+  ]
 }
